--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
+    <!-- 双核浏览器默认优先采用 Webkit内核-->
+    <meta name="renderer" content="webkit" />
+    <!--360浏览器采取兼容模式-->
+    <meta name="renderer" content="ie-comp">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>xunfastlims</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but xunfastlims doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+    <link rel="icon" href="favicon.ico">
+    <title>迅发平台管理系统</title>
+</head>
+
+<body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+</body>
+
 </html>
