--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="favicon.ico">
-    <title>迅发平台管理系统</title>
+    <title>中航油信息管理平台权限管理系统</title>
 </head>
 
 <body>
